--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "22.10.5",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "canvas": "^3.1.2",
+    "easy-mesh-gradient": "^0.0.5",
     "next": "15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
